# mikrotik-exporter

./: .dockerignore  .env.example  .env.test  .gitignore  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  LICENSE  NOTICE  README.md  build-docker.sh  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  release.yml
grafana/: dashboard.json
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml  servicemonitor.yaml
src/: collector.rs  error.rs  lib.rs  main.rs  prelude.rs
src/api/: mod.rs  state.rs
src/api/handlers/: health.rs  metrics.rs  mod.rs
src/collector/: cache.rs  cleanup.rs  mod.rs  router_task.rs
src/config/: mod.rs  tests.rs
src/metrics/: labels.rs  mod.rs  parsers.rs  registry.rs  tests.rs
src/metrics/registry/: cleanup.rs  init.rs  mod.rs  scrape.rs  update.rs
src/mikrotik/: client.rs  connection.rs  mod.rs  pool.rs  types.rs  wireguard.rs
src/mikrotik/connection/: auth.rs  mod.rs  parse.rs  protocol.rs
tests/: http_endpoints.rs  protocol.rs
