[package]
name = "mikrotik-exporter"
version = "0.1.1"
edition = "2024"
authors = ["Jesof <jesof@me.com>"]
license = "MIT"
repository = "https://github.com/Jesof/mikrotik-exporter"
readme = "README.md"
exclude = ["target"]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
# HTTP server
axum = "0.8.7"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
    "signal",
    "io-util",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "time",
] }

# Environment variables
dotenvy = "0.15.7"

# Cryptography for RouterOS API
md5 = "0.7"
hex = "0.4"

# Prometheus metrics
prometheus-client = "0.22.3"

# Async utilities (minimal features to reduce compile time)
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# HTTP utilities
http-body-util = "0.1.2"
