[package]
name = "mikrotik-exporter"
version = "0.2.2"
edition = "2024"
authors = ["Jesof <jesof@me.com>"]
license = "MIT"
repository = "https://github.com/Jesof/mikrotik-exporter"
readme = "README.md"
exclude = ["target"]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
# HTTP server
axum = "0.8.8"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
    "signal",
    "io-util",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "time",
] }

# Error handling
thiserror = "2.0.18"

# Environment variables
dotenvy = "0.15.7"

# Cryptography for RouterOS API
md5 = "0.8.0"
hex = "0.4"

# Prometheus metrics
prometheus-client = "0.24.0"

# Secure credential handling
secrecy = { version = "0.10.0", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
